--- a/index.html
+++ b/index.html
@@ -5,20 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>HR-management-system</title>
 </head>
 
 <body>
-    <div class="topnav">
-        <a href="#home">Home</a>
-        <a href="#about">News</a>
-        <a href="accounting.html">Accounting</a>
-        <a href="#contact">Contact</a>
-        <a href="#help">About</a>
-    </div>
+    <header>
+        <div class="topnav">
+            <a href="#home">Home</a>
+            <a href="accounting.html">Accounting</a>
+        </div>
+    </header>
+    <main>
+        <form class="new-emp" id="form">
+            <fieldset>
+                <legend>Add a new employee</legend>
+                <div>
+                    <label for="fullname">Full Name</label><br>
+                    <input type="text" id="fullname" name="fullname""><br>
+                </div>
+                <div>
+            <label for=" Department">Department</label><br>
 
+                    <select name="dept" id="dept">
+                        <option value="administration">Administration</option>
+                        <option value="marketing">Marketing
+                        </option>
+                        <option value="development">Development</option>
+                        <option value="finance">Finance</option>
+                    </select><br>
+                </div>
+
+                <div>
+                    <label for="image">Image URL</label><br>
+                    <input type="text" id="image" name="image"><br><br>
+                </div>
+                <div>
+                    <label for=" Department">Level</label><br>
+                    <select name="level" id="level">
+                        <option value="junior">Junior</option>
+                        <option value="mid-senior">Mid-Senior
+                        </option>
+                        <option value="senior">Senior</option>
+                    </select><br>
+                </div>
+                <input type="submit" value="Submit" id="btn">
+            </fieldset>
+        </form>
+    </main>
+    <section class="parent">
+        <div id="empSection">
+
+        </div>
+    </section>
     <footer>
-        <img src="/assets/social_media_icon.png">
+        <div>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+        </div>
         &copy; 2022 ASAC All rights reserved
     </footer>
     <script src="js/app.js"></script>
