follow up working on hr management, style cards, fix form submission

--- a/index.html
+++ b/index.html
@@ -44,28 +44,26 @@
                 <div>
                     <label for=" Department">Level</label><br>
                     <select name="level" id="level">
-                        <option value="junior">Junior</option>
-                        <option value="mid-senior">Mid-Senior
+                        <option value="Junior">Junior</option>
+                        <option value="Mid-Senior">Mid-Senior
                         </option>
-                        <option value="senior">Senior</option>
+                        <option value="Senior">Senior</option>
                     </select><br>
                 </div>
                 <input type="submit" value="Submit" id="btn">
             </fieldset>
         </form>
     </main>
-    <section class="parent">
-        <div id="empSection">
+    <div id="empSection">
 
-        </div>
-    </section>
+    </div>
     <footer>
         <div>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-google"></a>
         </div>
-        &copy; 2022 ASAC All rights reserved
+        &copy; LTUC
     </footer>
     <script src="js/app.js"></script>
 </body>
