Render  department information in a table, add some style

--- a/accounting.html
+++ b/accounting.html
@@ -5,22 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/accounting.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>HR-management-system</title>
 </head>
 
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="#about">News</a>
         <a href="accounting.html">Accounting</a>
-        <a href="#contact">Contact</a>
-        <a href="#help">About</a>
     </div>
+    <table id="table">
 
+    </table>
     <footer>
-        <img src="/assets/social_media_icon.png">
-        &copy; 2022 ASAC All rights reserved
+        <div>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+        </div>
+        &copy; LTUC
     </footer>
+    <script src="js/accounting.js"></script>
 </body>
 
 </html>
